Bug 793387 - Lightning build is broken after Bug 777292 (error: cannot convert from 'int' to 'nsresult') r=philipp